# Unitary-Manifold-

./: .gitignore  4L8R.md  AGENTS.md  ALGEBRA_PROOF.py  ALGEBRA_PROOF_GUIDE.md  ATOMIC_STRUCTURE.md  AUDIT_TOOLS.py  AUDIT_v10_42_2026-05-10.md  AUTOMATED_PEER_REVIEW.md  AXIOMZERO_DBA.md  BIG_QUESTIONS.md  CITATION.cff  COMMERCIAL_TERMS.md  COMPLETION_REPORT.md  CONSISTENCY_LOG.md  CONSTANTS_CONVERGENCE.md  CONTRIBUTING.md  CONTRIBUTORS.md  CORRESPONDENCE_MAP.md  DERIVATION.md  DOWNLOAD_GUIDE.md  DUAL_USE_NOTICE.md  FALLIBILITY.md  FINAL_MANIFOLD_AUDIT.md  FINAL_REVIEW_CONCLUSION.md  FINGERPRINTS.md  HILS_SESSION_CURRENT.md  HILS_SESSION_LOG.md  HOW_TO_BREAK_THIS.md  LEGAL.md  LEGEND.md  LICENSE  LICENSE-AGPL  MCP_INGEST.md  NATURAL_SCIENCES.md  NOTICE  PEER_REVIEW_RESPONSE_v933.md  PENTAD_PRODUCT_NOTICE.md  QUANTUM_THEOREMS.md  README.md  (+36 more)
.devcontainer/: devcontainer.json
.dvc/: config
.github/: CODEOWNERS  CONTEXT_SSCE.md  DISCUSSION_GUIDE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  pull_request_template.md  topics.yml
1-THEORY/: ALGEBRA_PROOF_GUIDE.md  BRAID_TWIN_DUALITY.md  COMPLETION_REPORT.md  CONSTANTS_CONVERGENCE.md  CORRESPONDENCE_MAP.md  DERIVATION.md  DERIVATION_STATUS.md  FINGERPRINTS.md  LAB_SCALE_CP_VIOLATION_57_BRAID.md  NW_UNIQUENESS_STATUS.md  QUANTUM_THEOREMS.md  README.md  UNIFICATION_PROOF.md  WINDING_NUMBER_DERIVATION.md  Z2_PARITY_NOTE.md
2-REPRODUCIBILITY/: CONSISTENCY_LOG.md  README.md  SIMULATION_RUNS.md  SNAPSHOT_MANIFEST.md  VALIDATION_REPORT.md
3-FALSIFICATION/: ADVERSARIAL_PEER_REVIEW_2026-05-04.md  AUTOMATED_PEER_REVIEW.md  BIG_QUESTIONS.md  COPILOT_FINAL_VERDICT.md  CRITIQUE_HARDENING_PROTOCOL.md  CROSSDISCIPLINARY_PEER_REVIEW_2026-05-02.md  EXTERNAL_VALIDATION_LEDGER.md  FALSIFICATION_CONDITIONS.md  FALSIFICATION_REGISTER.md  FINAL_REVIEW_CONCLUSION.md  GEMINI_RED_TEAM_3_2026-05-06.md  INDEPENDENT_PARALLEL_REVIEW_2026-05-01.md  LAB_LITEBIRD_SUBSTITUTE_PROTOCOL.md  LAB_SCALE_CP_VIOLATION_FALSIFIER.md  OBSERVATION_TRACKER.md  PILLAR247_UNIFIED_OBSERVATION_INGEST_AND_VERDICT_ROUTING_ENGINE.md  README.md  REVIEW_CONCLUSION.md  REVIEW_CONCLUSION_v10.1.md  REVIEW_CONCLUSION_v9.31.md  REVIEW_CONCLUSION_v9.32.md  REVIEW_CONCLUSION_v9.33.md  THEORY_LANDSCAPE.md  prediction.md
4-IMPLICATIONS/: ATOMIC_STRUCTURE.md  GEOMETRY_OF_ACCOUNTABILITY.md  NATURAL_SCIENCES.md  README.md  SOUL_AND_SCIENCE.md  UNDERSTANDABLE_EXPLANATION.md  WHAT_THIS_IS.md  WHAT_THIS_MEANS.md
4L8R/: book-axiom-journalism-series-01-philosophy.md  book-axiom-journalism-series-03-documents.md  book-axiom-journalism-series-04-verification.md  book-axiom-journalism-series-05-oracle.md
5-GOVERNANCE/: PENTAD_LANE_AUDIT.md  README.md  SEPARATION.md
6-MONOGRAPH/: JOURNAL_PAPER_SCOPE.md  LEGEND.md  MCP_INGEST.md  README.md  TABLE_OF_CONTENTS.md  ZENODO_SUBMISSION_CHECKLIST.md
SAFETY/: README.md  (+3 more)
(+2277 files in other folders)
